# g2-insecure-mongo-app-python

./: .dockerignore  .gitignore  .gitleaks.toml  .gitleaksignore  .isort.cfg  .pre-commit-config.yaml  Dockerfile  README.md  SECURITY.md  app.py  config.py  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
handlers/: auth_handler.py  item_handler.py
models/: init_db.py
mongo_init/: init.js
services/: user_service.py
tests/: conftest.py  test_api.py
