[tool.poetry]
name = "insecure-mongo-app"
version = "0.1.0"
description = "Intentionally insecure Flask API using MongoDB and JWT, for security training purposes"
authors = ["Avishay Bar <your.email@example.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "handlers" }, { include = "services" }, { include = "models" }]

[tool.poetry.dependencies]
python = "^3.11"
flask = ">=3.1.3"
pymongo = "==4.13.2"
pyjwt = ">=2.13.0"
cryptography = ">=48.0.1"
flasgger = "^0.9.7.1"
python-dotenv = "^1.0.0"
click = ">=8.3.3"
mistune = ">=3.2.1"
werkzeug = ">=3.1.6"


[tool.poetry.group.dev.dependencies]
black = "==24.1.1"
isort = "==5.11.5"
flake8 = "==7.0.0"
yamllint = "*"
pre-commit = "*"
pytest = "^8.2.0"
pytest-asyncio = "^1.0.0"
httpx = "^0.28.1"

[build-system]
build-backend = "poetry.core.masonry.api"
